Optimized Media Query for Iphone Devices

--- a/index.pug
+++ b/index.pug
@@ -2,8 +2,9 @@ doctype html
 head
   meta(charset='UTF-8')
   meta(name='viewport', content='width=device-width, initial-scale=1.0')
+  link(rel='icon', type='image/png', sizes='48x48', href='/favicon48.png')
   link(rel='stylesheet', href='/css/main.css')
-  title PugJs and SaSS
+  title Contact Me -- Ilhambara
 .slide.active
   .card
     #img01.card__img
