--- a/css/main.css
+++ b/css/main.css
@@ -31,7 +31,8 @@ body {
 }
 
 .card {
-  width: 50%;
+  width: 100%;
+  max-width: 720px;
   height: 60vh;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -39,6 +40,7 @@ body {
   -webkit-box-shadow: 0 30px 40px -15px rgba(0, 0, 0, 0.35);
           box-shadow: 0 30px 40px -15px rgba(0, 0, 0, 0.35);
   background-color: #fff;
+  border-radius: 6px;
 }
 
 .card__img {
@@ -48,6 +50,7 @@ body {
   background-size: cover;
   background-repeat: no-repeat;
   z-index: 10;
+  border-radius: 6px 0 0 6px;
 }
 
 #img01 {
@@ -96,7 +99,8 @@ body {
 
 .card__content-link {
   color: #BA3428;
-  font-size: 1rem;
+  font-size: 1.2rem;
+  font-weight: 600;
   display: block;
   cursor: pointer;
   opacity: 0.7;
@@ -166,8 +170,11 @@ body {
   font-size: 2rem;
 }
 
-/* media query */
+/* media query: Pixel 2 and Iphone 6/7/8 Plus */
 @media only screen and (max-width: 600px) {
+  body {
+    height: 100vh;
+  }
   .slide {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -203,7 +210,7 @@ body {
     position: relative;
     background-position: center;
     width: 100%;
-    height: 240px;
+    height: 20vh;
     background-size: cover;
     background-repeat: no-repeat;
     z-index: 10;
@@ -214,10 +221,15 @@ body {
     -webkit-box-sizing: border-box;
             box-sizing: border-box;
     width: 100%;
+    height: 74%;
+    max-height: -webkit-max-content;
+    max-height: -moz-max-content;
+    max-height: max-content;
   }
   .card__content-theme {
     font-weight: 900;
     font-size: 1rem;
+    margin: 10px auto;
   }
   .card__content-header {
     font-weight: 900;
@@ -225,11 +237,34 @@ body {
     line-height: 1;
   }
   .card__content-paragraph {
+    font-size: 1.1rem;
+    line-height: 1.7;
+  }
+  .card__content-link {
+    font-size: 1.4rem;
+    margin: 20px auto;
+  }
+}
+
+/* media query: Iphone 6/7/8 */
+@media only screen and (max-width: 375px) {
+  .card__content {
+    padding: 5%;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
+    width: 100%;
+    height: 74%;
+    max-height: -webkit-max-content;
+    max-height: -moz-max-content;
+    max-height: max-content;
+  }
+  .card__content-paragraph {
     font-size: 1rem;
     line-height: 1.7;
   }
   .card__content-link {
     font-size: 1.4rem;
+    margin: 20px auto;
   }
 }
 /*# sourceMappingURL=main.css.map */
