--- a/css/main.scss
+++ b/css/main.scss
@@ -20,11 +20,13 @@ body, html{
   }
   
   .card{
-    width: 50%;
+    width: 100%;
+    max-width: 720px;
     height: 60vh;
     display: flex;
     box-shadow: 0 30px 40px -15px rgba(0,0,0,0.35);
     background-color: #fff;
+    border-radius: 6px;
   }
   
   .card__img{
@@ -34,6 +36,7 @@ body, html{
     background-size: cover;
     background-repeat: no-repeat;
     z-index: 10;
+    border-radius: 6px 0 0 6px;
   }
   
   #img01{
@@ -81,7 +84,8 @@ body, html{
   
   .card__content-link{
     color: #BA3428;
-    font-size: 1rem;
+    font-size: 1.2rem;
+    font-weight: 600;
     display: block;
     cursor: pointer;
     opacity: 0.7;
@@ -153,9 +157,14 @@ body, html{
   }
 
 
-/* media query */
+/* media query: Pixel 2 and Iphone 6/7/8 Plus */
 
 @media only screen and (max-width: 600px) {
+
+    body {
+      height: 100vh;
+    }
+
     .slide{ 
         display: flex;
         justify-content: center;
@@ -182,7 +191,7 @@ body, html{
         position: relative;
         background-position: center;
         width: 100%;
-        height: 240px;
+        height: 20vh;
         background-size: cover;
         background-repeat: no-repeat;
         z-index: 10;
@@ -193,11 +202,14 @@ body, html{
         padding: 6%;
         box-sizing: border-box;
         width: 100%;
+        height: 74%;
+        max-height: max-content;
       }
 
       .card__content-theme{
         font-weight: 900;
-        font-size: 1rem; 
+        font-size: 1rem;
+        margin: 10px auto;
       }
 
       .card__content-header{
@@ -207,11 +219,35 @@ body, html{
       }
       
       .card__content-paragraph{
-        font-size: 1rem;
+        font-size: 1.1rem;
         line-height: 1.7;
       }
 
       .card__content-link{
         font-size: 1.4rem;
+        margin: 20px auto;
       }
+}
+
+
+/* media query: Iphone 6/7/8 */
+
+@media only screen and (max-width: 375px) {
+  .card__content{
+    padding: 5%;
+    box-sizing: border-box;
+    width: 100%;
+    height: 74%;
+    max-height: max-content;
+  }
+
+  .card__content-paragraph{
+    font-size: 1rem;
+    line-height: 1.7;
+  }
+
+  .card__content-link{
+    font-size: 1.4rem;
+    margin: 20px auto;
+  }
 }
