Update the social media description

--- a/index.pug
+++ b/index.pug
@@ -12,9 +12,9 @@ head
       p.card__content-theme Twitter
       h2.card__content-header @zgve679jdv
       p.card__content-paragraph
-        | Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dicta porro,
-        | tempora consequuntur vel dolore assumenda aspernatur cum dignissimos unde reprehenderit sint? Neque, id
-        | consequuntur. Quibusdam sit officiis debitis corrupti. Quasi.
+        | I mainly use Twitter to stay up to date for the latest news around software development.
+        | Either straightly comes from the Devs or the company itself. Fortunately, the Devs here
+        | also teach me a lot of insights about another skill sets that Devs must have. 
       a(href='https://twitter.com/zgve679jdv').card__content-link Visit 
 .slide
   .card
@@ -23,9 +23,9 @@ head
       p.card__content-theme GitHub
       h2.card__content-header ilhambara
       p.card__content-paragraph
-        | Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dicta porro,
-        | tempora consequuntur vel dolore assumenda aspernatur cum dignissimos unde reprehenderit sint? Neque, id
-        | consequuntur. Quibusdam sit officiis debitis corrupti. Quasi.
+        | Like the most people do, GitHub is used to manage repository or sharing projects.
+        | Similar things I do is look for open source project, especially when there's an event
+        | to contribute and manage my team's repository for work, task, or for fun only.
       a(href='https://github.com/ilhambara').card__content-link Visit 
 .slide
   .card
@@ -34,9 +34,9 @@ head
       p.card__content-theme Discord
       h2.card__content-header Ilhambara#9556
       p.card__content-paragraph
-        | Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dicta porro,
-        | tempora consequuntur vel dolore assumenda aspernatur cum dignissimos unde reprehenderit sint? Neque, id
-        | consequuntur. Quibusdam sit officiis debitis corrupti. Quasi.
+        | Fun place to hang out on the sidelines of tough days. I joined the server that discussing 
+        | Web Dev things, Tech community, and a random servers with my friends. I could say that 
+        | Discord is really enjoyable platform.
       a(href='https://discord.com/users/599008087701192734').card__content-link Visit 
 .slide
   .card
@@ -45,9 +45,9 @@ head
       p.card__content-theme Instagram
       h2.card__content-header @ilham.bara
       p.card__content-paragraph
-        | Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dicta porro,
-        | tempora consequuntur vel dolore assumenda aspernatur cum dignissimos unde reprehenderit sint? Neque, id
-        | consequuntur. Quibusdam sit officiis debitis corrupti. Quasi.
+        | Currently, I use Instagram in a passive way. But I still have a plan to post someday. 
+        | For now on, I only post stories depends on some condition. Speaking of which 
+        | pulled me away is that people use Instagram nowadays in a different puprose.
       a(href='https://instagram.com/ilham.bara').card__content-link Visit 
 .prevnext
   button#prev.prevnext-button
